--- a/cmd/web/user/profile.templ
+++ b/cmd/web/user/profile.templ
@@ -9,7 +9,7 @@ templ Profile(user *models.User, genres []*models.Genre) {
 	<dialog id="location_modal" class="modal modal-md">
 		<div class="modal-box" id="htmx_modal"></div>
 	</dialog>
-	<div class="max-w-screen-lg mx-auto items-start flex flex-col">
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col mb-10">
 		<div class="breadcrumbs text-lg">
 			<ul>
 				<li>My Profile</li>
@@ -23,10 +23,10 @@ templ Profile(user *models.User, genres []*models.Genre) {
 			<div class="flex flex-col items-center ">
 				<div class="grid grid-cols-2 w-full items-start justify-between py-5 gap-6 ">
 					<!-- genres -->
-					<div class="felx justify-items-center">
+					<div class="felx h-[30rem] overflow-y-auto justify-items-center">
 						<div class="flex flex-wrap gap-2 justify-start">
 							for _, genre := range genres {
-								@GenreButton(genre, user.ContainsGenre(genre.Name))
+								@GenreButton(genre, user.HasGenre(genre.Name))
 							}
 						</div>
 					</div>
@@ -76,7 +76,7 @@ templ Profile(user *models.User, genres []*models.Genre) {
 		</article>
 		@web.LoadingBooks()
 		<div
-			class="carousel carousel-center rounded-box h-100"
+			class="carousel carousel-center rounded-box h-300"
 			hx-get="/books/recommendations"
 			hx-swap="outerHTML"
 			hx-trigger="load"
@@ -114,11 +114,22 @@ templ Recommendations(books []*models.Book) {
 			<h2>Pick the subjects and get some recommendations!</h2>
 		</article>
 	} else {
-		<div id="recommendations-container" class="flex flex-col items-center mx-10 md:mx-20 mb-10">
-			<div class="carousel carousel-center rounded-box h-100">
+		<div id="recommendations-container" class="flex items-center w-full overflow-x-auto rounded-box">
+			<div class="carousel carousel-center rounded-box h-250">
 				for _, book := range books {
-					<div class="carousel-item">
-						<img src={ book.ImageLink } alt="Book cover"/>
+					<div class="carousel-item px-2 transition-opacity duration-300">
+						<div class="felx flex-col flex-wrap">
+							<img src={ book.ImageLink } alt="Book cover" class="h-[250px] w-[162px] object-cover shadow-xl"/>
+							<div
+								hx-post={ fmt.Sprintf("/user-books/%s", book.ID) }
+								hx-trigger="click"
+								hx-swap="none"
+								class="btn w-full btn-neutral btn-outline mt-2"
+								_="on click add .opacity-0 to closest .carousel-item then wait 350ms then remove closest .carousel-item"
+							>
+								+ Add Book
+							</div>
+						</div>
 					</div>
 				}
 			</div>
@@ -126,66 +137,6 @@ templ Recommendations(books []*models.Book) {
 	}
 }
 
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Science+Fiction"
-// 	hx-swap="outerHTML"
-// ># Sci-Fi</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Fiction"
-// 	hx-swap="outerHTML"
-// ># Fiction</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Russian-Literature"
-// 	hx-swap="outerHTML"
-// ># Russian Literature</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/History"
-// 	hx-swap="outerHTML"
-// ># History</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Coding"
-// 	hx-swap="outerHTML"
-// ># Coding</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Psychology"
-// 	hx-swap="outerHTML"
-// ># Psychology</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Cooking"
-// 	hx-swap="outerHTML"
-// ># Cooking</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Sports"
-// 	hx-swap="outerHTML"
-// ># Sports</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Baking"
-// 	hx-swap="outerHTML"
-// ># Baking</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Novels"
-// 	hx-swap="outerHTML"
-// ># Novels</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Crime"
-// 	hx-swap="outerHTML"
-// ># Crime</button>
-// <button
-// 	class="btn btn-outline btn-neutral"
-// 	hx-post="/users/profile/genres/Drama"
-// 	hx-swap="outerHTML"
-// ># Drama</button>
 templ LocationModal(user *models.User) {
 	<form
 		method="dialog"
