--- a/cmd/web/error_pages/ErrorPage500.templ
+++ b/cmd/web/error_pages/ErrorPage500.templ
@@ -1,5 +1,11 @@
 package error_pages
 
 templ ErrorPage500() {
-	<h1>Something went wrong...</h1>
+	<!-- <h1>Something went wrong...</h1> -->
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col mb-10">
+		<article class="prose prose-sm lg:prose-h1:text-5xl lg:prose-h2:text-4xl lg:prose-h3:text-3xl md:text-sm md:prose-base w-full max-w-4xl grow pt-10">
+			<h1>Error 500</h1>
+            <span>Something went wrong...</span>
+		</article>
+	</div>
 }
