--- a/cmd/web/exchange/matches.templ
+++ b/cmd/web/exchange/matches.templ
@@ -43,7 +43,7 @@ templ MatchDiv(match *models.ExchangeMatch, request *models.ExchangeRequest) {
 						loading="lazy"
 						alt="google logo"
 					/>
-					<p>{ matchedReq.UserEmail }</p>
+					<p>{ matchedReq.User.Email }</p>
 					<div
 						class="tooltip tooltip-top tooltip-neutral [justify-self:right] self-start"
 						data-tip="copy"
